[package]
name = "amon-hen"
version = "0.1.26"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Amon Hen: Rust-native orchestration for Codex, Claude, Gemini, and Linear delivery."
readme = "README.md"
keywords = ["ai", "agents", "automation", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "Cargo.toml",
  "CHANGELOG.md",
  "README.md",
  "src/**/*.rs"
]

[[bin]]
name = "amon-hen"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.52", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
crossterm = "0.29.0"
libc = "0.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
